--- a/requirements.txt
+++ b/requirements.txt
@@ -4,16 +4,24 @@ autopep8==1.5.4
 backcall==0.2.0
 bcrypt==3.2.0
 blinker==1.4
+boto3==1.17.1
+botocore==1.20.1
+certifi==2020.12.5
 cffi==1.14.4
+chardet==4.0.0
 click==7.1.2
 decorator==4.4.2
 dnspython==2.0.0
 email-validator==1.1.2
+Faker==5.8.0
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
+Flask-Cors==3.0.10
 Flask-DebugToolbar==0.11.0
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
+geographiclib==1.50
+geopy==2.1.0
 gunicorn==20.0.4
 idna==2.10
 ipython==7.19.0
@@ -22,6 +30,7 @@ isort==5.6.4
 itsdangerous==1.1.0
 jedi==0.17.2
 Jinja2==2.11.2
+jmespath==0.10.0
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
@@ -34,11 +43,18 @@ ptyprocess==0.6.0
 pycodestyle==2.6.0
 pycparser==2.20
 Pygments==2.7.3
+PyJWT==2.0.1
 pylint==2.6.0
+python-dateutil==2.8.1
+python-dotenv==0.15.0
+requests==2.25.1
+s3transfer==0.3.4
 six==1.15.0
 SQLAlchemy==1.3.20
+text-unidecode==1.3
 toml==0.10.2
 traitlets==5.0.5
+urllib3==1.26.3
 wcwidth==0.2.5
 Werkzeug==1.0.1
 wrapt==1.12.1
